--- a/engines/common/nucleus/scss/nucleus/_nav.scss
+++ b/engines/common/nucleus/scss/nucleus/_nav.scss
@@ -8,7 +8,7 @@
         .g-dropdown {
            top: -9999px;
             &.g-active {
-                top: auto;
+                top: 100%;
             }
             .g-dropdown {
             	top: 0;
